[测试]第一次测试

--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -1,7 +1,38 @@
-Version: '1.0.0-SNAPSHOT'
-Title: '&f[&eScript&f]'
+Version: '2.0.0-SNAPSHOT'
+Title: '&6✦&f'
 Help:
-  - '帮助指令'
+  - '&e&m =                                             = '
+  - '&b/activity                          &f - 打开菜单'
+  - '&b/activity reload                &f - 重载配置'
+  - '&b/activity rank                   &f - 活跃排行'
+  - '&b/activity task                   &f - 任务列表'
+  - '&b/activity playtime               &f - 在线奖励'
+  - '&b/activity add [p] <a>           &f - 补签机会'
+  - '&9其中&7p&9表示玩家，&7a&9表示数量，&7<>&9表示可选，&7[]&9表示必填'
+  - '&e&m =                                             = '
 PlayerCommand: '&c该指令只能由玩家使用!'
 Reloading: '&f配置文件重载中...'
 Reloaded: '&f配置文件重载完成!'
+
+#菜单显示的日期 %month%是月 %day%是日
+DisplayDay: '&r%month%&e&l月&r%day%&e&l日'
+
+FaultSignIn: '&f很遗憾没办法签到'
+SignInFestival: '&f祝你%festival%快乐!'
+PlaytimeRemind: '&f在线奖励可以领取快去看看吧'
+SignInRemind: '&f今天还没签到呢，快点签到领取奖品吧'
+SignInFuture: '&f这天还没到呢，你想穿越去签到吗'
+SignInSuccess: '&f成功签到，奖品已放入背包'
+SignInWeekend: '&f祝您周末愉快'
+UnluckToday: '&f今天的运气差极了'
+SignInAlready: '&f你已经签到过了'
+NotEnoughChance: '&f补签次数已经用完了呢'
+NotEnoughActivity: '&f你没有足够的活跃度'
+NotEnoughSignin: '&f你没有足够的签到次数'
+NotEnoughPlaytime: '&f你没有足够的在线时间'
+ExchangeSuccess: '&f成功领取奖励'
+RewardTask: '&f恭喜你成功完成任务 &3%task%，并获得活跃积分 &3%amount%'
+AddChance: '&f成功为&b %player% &f添加 &3%amount% &f次补签机会'
+FinishTask: '&f你已完成&3 %task% &f快点领取奖励吧!'
+ActivityRank: '&f活跃度排行拉取中...'
+SignInRewardLimit: '&f你这个月已经领取过这个奖励了'
