--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <groupId>com.fireflyest</groupId>
-    <artifactId>Script</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>Activity</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
