--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,215 @@
 Version: '2.0.0-SNAPSHOT'
+
+#是否展示菜单中玩家头颅的皮肤(加载皮肤已不在主线程，不会引起卡顿但仍会造成网络问题)
 DisplaySkin: true
+
+#默认的补签次数，每个月会送的数量
 DefaultChance: 2
+
+#周末签到的物品类型
+WeekendItem: MAP
+
+#任务进度条
+TaskProgress: true
+
+#普通签到奖励，随机取一，要多个奖励请使用kit
+#第一个奖励是运气不好给的
+Rewards:
+  - give %player% poisonous_potato 1
+  - give %player% diamond 1
+  - give %player% gold_ingot 3
+  - give %player% golden_apple 1
+  - eco give %player% 200
+#周末奖励
+Weekend:
+  - give %player% poisonous_potato 1
+  - eco give %player% 200
+
+#节日奖励(至少保留一个)
+Festival:
+  National:
+    Month: 10
+    Day: 1
+    Item: NETHER_STAR
+    Reward: give %player% diamond 10
+  Christmas:
+    Month: 12
+    Day: 25
+    Item: COOKED_CHICKEN
+    Reward: give %player% COOKED_CHICKEN 10
+  测试:
+    Month: 5
+    Day: 23
+    Item: NETHER_STAR
+    Reward: give %player% diamond 10
+
+#活跃奖励(至少保留一个)
+Activity:
+  普通:
+    Loc: 20
+    Item: WHITE_SHULKER_BOX
+    Price: 100
+    Reward: give %player% diamond 1
+  良好:
+    Loc: 12
+    Item: LIME_SHULKER_BOX
+    Price: 300
+    Reward: give %player% diamond 5
+  精品:
+    Loc: 30
+    Item: LIGHT_BLUE_SHULKER_BOX
+    Price: 500
+    Reward: give %player% diamond_block 1
+  极品:
+    Loc: 14
+    Item: PURPLE_SHULKER_BOX
+    Price: 800
+    Reward: give %player% elytra 1
+  至尊:
+    Loc: 32
+    Item: YELLOW_SHULKER_BOX
+    Price: 1000
+    Reward: give %player% dragon_head 1
+  史诗:
+    Loc: 24
+    Item: ORANGE_SHULKER_BOX
+    Price: 3000
+    Reward: give %player% wither_skeleton_skull 1
+  神遗:
+    Loc: 22
+    Item: RED_SHULKER_BOX
+    Price: 5000
+    Reward: give %player% nether_star 1
+
+#签到奖励(至少保留一个)
+Signin:
+  连续3天:
+    Loc: 11
+    Item: LEATHER_HORSE_ARMOR
+    Type: 连续
+    Amount: 3
+    Reward: give %player% gold_ingot 3
+  连续7天:
+    Loc: 21
+    Item: IRON_HORSE_ARMOR
+    Type: 连续
+    Amount: 7
+    Reward: give %player% emerald 16
+  连续15天:
+    Loc: 23
+    Item: GOLDEN_HORSE_ARMOR
+    Type: 连续
+    Amount: 15
+    Reward: give %player% diamond 20
+  本月全勤:
+    Loc: 15
+    Item: DIAMOND_HORSE_ARMOR
+    Type: 连续
+    Amount: 30
+    Reward: give %player% slime_block 2
+  元老玩家:
+    Loc: 13
+    Item: ENCHANTED_BOOK
+    Type: 累计
+    Amount: 99
+    Reward: give %player% creeper_head 1
+
+#在线奖励(至少保留一个)
+Playtime:
+  在线8小时:
+    Loc: 11
+    Item: BRICKS
+    Type: 本月
+    Time: 8时
+    Reward: give %player% gold_ingot 25
+  在线3天:
+    Loc: 13
+    Item: IRON_BLOCK
+    Type: 本月
+    Time: 3天
+    Reward: give %player% emerald 16
+  在线一周:
+    Loc: 15
+    Item: GOLD_BLOCK
+    Type: 本月
+    Time: 7天
+    Reward: give %player% elytra 1
+  在线半小时:
+    Loc: 29
+    Item: BRICK
+    Type: 持续
+    Time: 30分
+    Reward: give %player% gold_ingot 6
+  在线2小时:
+    Loc: 31
+    Item: IRON_INGOT
+    Type: 持续
+    Time: 2时
+    Reward: give %player% diamond 5
+  在线5小时:
+    Loc: 33
+    Item: GOLD_INGOT
+    Type: 持续
+    Time: 5时
+    Reward: give %player% golden_apple 1
+
+#任务列表(至少保留一个, 第一个为新手任务)
+Task:
+  初来乍到:
+    Item: SLIME_BALL
+    Type: newly
+    Work: 交谈
+    Target: 守护者
+    Progress: 1
+    Reward: 10
+  勤劳矿工:
+    Item: DIAMOND_ORE
+    Type: daily
+    Work: 开采
+    Target: DIAMOND_ORE
+    Progress: 10
+    Reward: 10
+  勤劳伐木:
+    Item: OAK_LOG
+    Type: daily
+    Work: 开采
+    Target: 原木
+    Progress: 10
+    Reward: 10
+  亡灵杀手:
+    Item: BONE
+    Type: daily
+    Work: 击杀
+    Target: 亡灵
+    Progress: 10
+    Reward: 10
+  猎空杀手:
+    Item: ELYTRA
+    Type: daily
+    Work: 击杀
+    Target: 飞行
+    Progress: 10
+    Reward: 10
+  发家致富:
+    Item: OAK_LOG
+    Type: normal
+    Work: 开采
+    Target: 原木
+    Progress: 10
+    Reward: 10
+  我的家园:
+    Item: SLIME_BALL
+    Type: normal
+    Work: 指令
+    Target: Plot
+    Progress: 1
+    Reward: 10
+
+#任务对象(至少保留一个)
+Object:
+  原木: ACACIA_LOG,BIRCH_LOG,DARK_OAK_LOG,JUNGLE_LOG,OAK_LOG
+  亡灵: ZOMBIE,SKELETON
+
 
 Item:
   Future:
@@ -8,31 +217,31 @@ Item:
     material: PAPER
     lore:
       - '&6@&9future'
-      - day
+      - ''
   Now:
     display: '&f[&a&l签到&f]'
     material: FEATHER
     lore:
       - '&6@&9now'
-      - day
+      - ''
   Finish:
     display: '&f[&e&l已签&f]'
     material: FILLED_MAP
     lore:
       - '&6@&9finish'
-      - day
+      - ''
   Miss:
     display: '&f[&c&l未签&f]'
     material: PAPER
     lore:
       - '&6@&9miss'
-      - day
+      - ''
   Festival:
     display: '&f[&b&l节日&f]'
     material: DIAMOND
     lore:
       - '&6@&9festival'
-      - day
+      - ''
   Blank:
     display: ' '
     material: WHITE_STAINED_GLASS_PANE
@@ -44,8 +253,9 @@ Item:
     material: PLAYER_HEAD
     lore:
       - '&6@&9activity'
-      - '&3&l积分&f: value'
-      - '&3&l排行&f: value'
+      - '&3&l当天&f: value'
+      - '&3&l当月&f: value'
+      - '&3&l上月&f: value'
       - ''
       - '&6*&7点击打开积分界面'
       - '&6*&7在线、签到、做任务都可获取积分'
@@ -60,7 +270,7 @@ Item:
       - ''
       - '&6*&7点击打开签到奖励界面'
   Playtime:
-    display: '&e&l在线时长'
+    display: '&e&l在线数据'
     material: CLOCK
     lore:
       - '&6@&9playtime'
@@ -75,7 +285,7 @@ Item:
     material: BOOKSHELF
     lore:
       - '&6@&9task'
-      - '&3&l进行&7:&f value'
+      - '&3&l接受&7:&f value'
       - '&3&l完成&7:&f value'
       - ''
       - '&6*&7点击打开任务界面'
@@ -98,9 +308,7 @@ Item:
     material: CHEST
     lore:
       - '&6@&9a_reward'
-      - '&3&l品质&7:&f value'
-      - '&3&l花费&7:&f value'
-      - '&3&l项目&7:&f value'
+      - '&3&l要求&7:&f value'
       - ''
       - '&6*&7点击兑换'
   S_Reward:
@@ -110,7 +318,6 @@ Item:
       - '&6@&9s_reward'
       - '&3&l类型&7:&f value'
       - '&3&l次数&7:&f value'
-      - '&3&l项目&7:&f value'
       - ''
       - '&6*&7点击兑换'
   P_Reward:
@@ -120,7 +327,6 @@ Item:
       - '&6@&9p_reward'
       - '&3&l类型&7:&f value'
       - '&3&l时长&7:&f value'
-      - '&3&l项目&7:&f value'
       - ''
       - '&6*&7点击兑换'
   Taskbook:
@@ -128,7 +334,6 @@ Item:
     material: BOOK
     lore:
       - '&6@&9taskbook'
-      - '&3&l类型&7:&f value'
+      - '&3&l任务&7:&f value'
       - '&3&l对象&7:&f value'
       - '&3&l进度&7:&f value'
-      - '&3&l项目&7:&f value'
