--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -6,6 +6,7 @@ Help:
   - '&b/activity reload                &f - 重载配置'
   - '&b/activity rank                   &f - 活跃排行'
   - '&b/activity task                   &f - 任务列表'
+  - '&b/activity data [p]                &f - 任务列表'
   - '&b/activity playtime               &f - 在线奖励'
   - '&b/activity add [p] <a>           &f - 补签机会'
   - '&9其中&7p&9表示玩家，&7a&9表示数量，&7<>&9表示可选，&7[]&9表示必填'
@@ -31,8 +32,9 @@ NotEnoughActivity: '&f你没有足够的活跃度'
 NotEnoughSignin: '&f你没有足够的签到次数'
 NotEnoughPlaytime: '&f你没有足够的在线时间'
 ExchangeSuccess: '&f成功领取奖励'
-RewardTask: '&f恭喜你成功完成任务 &3%task%，并获得活跃积分 &3%amount%'
+RewardTask: '&f恭喜你成功完成任务 &3%task%，&f并获得活跃积分 &3%amount%'
 AddChance: '&f成功为&b %player% &f添加 &3%amount% &f次补签机会'
 FinishTask: '&f你已完成&3 %task% &f快点领取奖励吧!'
 ActivityRank: '&f活跃度排行拉取中...'
 SignInRewardLimit: '&f你这个月已经领取过这个奖励了'
+DayActivity: '&f玩家&3%player%&f该月在线 &3%days% &f天，共 &3%activity% &f活跃度'
