[修改]添加活跃抢答问题

--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -38,3 +38,8 @@ FinishTask: '&f你已完成&3 %task% &f快点领取奖励吧!'
 ActivityRank: '&f活跃度排行拉取中...'
 SignInRewardLimit: '&f你这个月已经领取过这个奖励了'
 DayActivity: '&f玩家&3%player%&f该月在线 &3%days% &f天，共 &3%activity% &f活跃度'
+SelectOption: '&f玩家&3%player%&f选择了选项 &3%option%'
+RightOption: '&f你选择了正确的答案'
+FalseOption: '&f很遗憾你选错了'
+Selected: '&f你已经回答过这个问题了'
+WinPlayer: '&f玩家&3%player%&f抢答正确，获得活跃度 &3%activity%'
