[修改]帮助指令内容修改

--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -9,7 +9,9 @@ Help:
   - '&b/activity data [p]                &f - 任务列表'
   - '&b/activity playtime               &f - 在线奖励'
   - '&b/activity add [p] <a>           &f - 补签机会'
+  - '&b/activity quiz [q] [r] [o]       &f - 活跃抢答'
   - '&9其中&7p&9表示玩家，&7a&9表示数量，&7<>&9表示可选，&7[]&9表示必填'
+  - '&9其中&7q&9表示问题题目，&7r&9表示正确的选项(A,B,C,...)，&7o&9表示选项(至少两个)'
   - '&e&m =                                             = '
 PlayerCommand: '&c该指令只能由玩家使用!'
 Reloading: '&f配置文件重载中...'
